# Kairo

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
databases/: settings.example.json
docs/: index.html
scripts/: download-node-bins.sh  download-vosk-model.js  download-vosk-model.sh  kairo-updater.key.pub  setup-release.sh
server/: .nodemonignore  detection_worker.js  nodemon.json  package-lock.json  package.json  reference_parser.js  server.js  vosk_installer.js
src/: app.js  display.html  index.html  styles.css
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/Frameworks/: Syphon_License.txt
src-tauri/Frameworks/Syphon.framework/Versions/A/: Syphon
src-tauri/Frameworks/Syphon.framework/Versions/A/Resources/: Info.plist
src-tauri/Frameworks/Syphon.framework/Versions/A/_CodeSignature/: CodeResources
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  ndi.rs  splash.html  syphon.rs
