[package]
name = "kairo"
version = "2.4.1"
description = "KAIRO — AI Scripture Assistant"
authors = ["KAIRO"]
edition = "2021"

[lib]
name = "kairo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["webview-data-url"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["time"] }
base64 = "0.22"
getrandom = "0.2"

# NDI native sender — links to libndi.dylib/dll/so at runtime via libloading.
# We don't bundle the NDI SDK; KAIRO finds libndi on the user's system from
# the standard NDI Tools / NDI SDK install paths. Renders verse text frames
# in pure Rust (no webview capture) so this works headless.
libloading = "0.8"
tiny-skia  = "0.11"
cosmic-text = "0.12"
crossbeam-channel = "0.5"

# ── macOS-only: Syphon native sender ─────────────────────────────────────
# Syphon publishes via OpenGL textures shared through IOSurface. We use
# objc2 to talk to Cocoa + the bundled Syphon.framework; gl_loader / gl
# for the CGL context and texture upload. All macOS-gated so non-Mac
# builds (Linux .deb / Windows .msi) skip these entirely.
[target.'cfg(target_os = "macos")'.dependencies]
objc2            = "0.5"
objc2-foundation = { version = "0.2", features = ["NSString", "NSDictionary", "NSValue", "NSGeometry"] }
core-foundation  = "0.10"
gl               = "0.14"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
